# Nex

./: .gitignore  Cargo.toml  README.md  agents.md  architecture.md  commands.txt  deploy.ps1  gpt2_mqa.pt  install.ps1  project.toml  test_reflect.nex
.github/workflows/: vscode-extension-compile.yml
.pystub/: python.py
ADR/: ADR-0001-object-model-mi.md  ADR-0002-asi.md  ADR-0003-modules-visibility.md  ADR-0004-var-runtime.md  ADR-0005-metadata-schema.md  ADR-0006-runtime-abi-gc.md  ADR-0007-using-disposal.md  ADR-0008-repl-jit.md  ADR-0009-type-discriminating-match.md
crates/nex/: Cargo.toml
crates/nex/src/: main.rs
crates/nex3d_native/: Cargo.toml
crates/nex3d_native/src/: lib.rs
crates/nex_crypto_native/: Cargo.toml
crates/nex_crypto_native/src/: lib.rs
crates/nex_http_native/: Cargo.toml
crates/nex_lsp/: Cargo.toml
crates/nex_lsp/src/: lib.rs  main.rs
crates/nex_regex_native/: Cargo.toml
crates/nex_regex_native/src/: lib.rs
crates/nex_repl/: Cargo.toml
crates/nex_repl/src/: lib.rs
crates/nex_runtime/: Cargo.toml
crates/nex_runtime/src/: async_runtime.rs  closure_runtime.rs  collections_ext.rs  convert.rs  engine.rs  env.rs  http.rs  http_server.rs  io_ext.rs  json.rs  lib.rs  logging.rs  math.rs  net.rs  path.rs  process.rs  reflect.rs  string.rs  testing.rs  threading.rs  time.rs  tls.rs  torch.rs  websocket.rs
crates/nex_runtime/src/ui/: app.rs  canvas.rs  layout.rs  mod.rs  renderer.rs  style.rs  terminal_renderer.rs  text_render.rs  wgpu_renderer.rs  widget.rs
crates/nex_std/: Cargo.toml
crates/nex_std/src/: lib.rs
crates/nex_torch_native/: Cargo.toml
crates/nex_torch_native/src/: lib.rs
crates/nex_ui_native/: Cargo.toml
crates/nex_ui_native/src/: app.rs  binding.rs  event.rs  lib.rs  overlay_renderer.rs  widget.rs
crates/nexc/: Cargo.toml
crates/nexc/src/: lib.rs  main.rs
crates/nexc_ast/: Cargo.toml
crates/nexc_ast/src/: lib.rs
crates/nexc_codegen_cranelift/: Cargo.toml
crates/nexc_codegen_cranelift/src/: lib.rs
crates/nexc_codegen_llvm/: Cargo.toml
crates/nexc_codegen_llvm/src/: lib.rs
crates/nexc_codegen_llvm_jit/: Cargo.toml
crates/nexc_codegen_llvm_jit/src/: lib.rs
crates/nexc_diag/: Cargo.toml
crates/nexc_diag/src/: lib.rs
crates/nexc_driver/: Cargo.toml
crates/nexc_driver/src/: lib.rs
crates/nexc_driver/tests/: codegen_integration.rs
crates/nexc_fmt/: Cargo.toml
crates/nexc_fmt/src/: lib.rs
crates/nexc_ir/: Cargo.toml
crates/nexc_ir/src/: lib.rs
crates/nexc_layout/: Cargo.toml
crates/nexc_layout/src/: lib.rs
crates/nexc_lex/: Cargo.toml
crates/nexc_lex/src/: lib.rs
crates/nexc_lint/: Cargo.toml
crates/nexc_lint/src/: lib.rs
crates/nexc_meta/: Cargo.toml
crates/nexc_meta/src/: lib.rs
crates/nexc_parse/: Cargo.toml
crates/nexc_parse/src/: lib.rs
crates/nexc_resolve/: Cargo.toml
crates/nexc_resolve/src/: lib.rs
crates/nexc_type/: Cargo.toml
crates/nexc_type/src/: lib.rs
crates/nexui_lower/: Cargo.toml
crates/nexui_lower/src/: lib.rs
crates/nexui_parse/: Cargo.toml
crates/nexui_parse/src/: lib.rs
docs/: NEX_LANGUAGE_REFERENCE.md  abi-object-layout-v1.md  grammar.ebnf  index.html  language-spec-v1.md  package-format.md  runtime-abi.h
docs/site/: annotations.html  async-await.html  classes.html  closures.html  control-flow.html  dynamic-var.html  enums.html  error-handling.html  function-types.html  functions.html  generics.html  getting-started.html  grammar.html  hello-world.html  index.html  interfaces.html  keywords.html  lib-nex3d.html  lib-overview.html  modules-imports.html  multiple-inheritance.html  nav.js  nexui-markup.html  nullable-types.html  operator-overloading.html  operators.html  reflection.html  resource-management.html  runtime.html  script.js  stdlib-collections.html  stdlib-convert.html  stdlib-core.html  stdlib-crypto.html  stdlib-env.html  stdlib-http.html  stdlib-io.html  stdlib-json.html  stdlib-logging.html  stdlib-math.html  (+21 more)
examples/: README.md  cuda_test.nex
examples/console_showcase/: README.md  project.toml
examples/console_showcase/src/: main.au.aumeta  main.nex
examples/cuda_test/: project.toml
examples/cuda_test/src/: main.nex
examples/game_showcase/: project.toml
examples/game_showcase/src/: main.nex
examples/gpt2_transformer/: gpt2_mqa.pt  gpt2_weights.pt  project.toml  train.ps1
examples/gpt2_transformer/src/: main.nex
examples/hello/: project.toml
examples/hello/src/: main.au.aumeta  main.nex
examples/ui_declarative/: project.toml
examples/ui_declarative/src/: AboutWidget.nexui  BaseWidget.nexui  CounterWidget.nex  CounterWidget.nexui  GreetingWidget.nex  GreetingWidget.nexui  HomeWidget.nex  HomeWidget.nexui  MainWindow.nex  MainWindow.nexui  main.nex
libs/crypto/: project.toml
libs/crypto/src/: aes.nex  encode.nex  hash.nex  hmac.nex  kdf.nex  random.nex  sign.nex
libs/http/: project.toml
libs/http/src/: client.nex  server.nex
libs/json/: project.toml
libs/json/src/: Json.nex
libs/net/: project.toml
libs/net/src/: tls.nex  websocket.nex
libs/nex3d/: project.toml
libs/nex3d/src/: anim.nex  audio.nex  bounds.nex  camera.nex  color.nex  draw.nex  engine.nex  font.nex  gamepad.nex  input.nex  light.nex  math.nex  model.nex  rendertarget.nex  sprite.nex  states.nex  texture.nex  time.nex
libs/nex_ui/: project.toml
libs/nex_ui/src/: app.nex  binding.nex  canvas.nex  dialog.nex  event.nex  style.nex  widget.nex
libs/regex/: project.toml
libs/regex/src/: pattern.nex
libs/torch/: project.toml
libs/torch/src/: loss.nex  model.nex  nn.nex  optim.nex  tensor.nex  train.nex
nex/: README.md
nex/0.1.100/config/: nex.toml
nex/0.1.101/config/: nex.toml
nex/0.1.102/config/: nex.toml
nex/0.1.103/config/: nex.toml
nex/config/: nex.toml
tests/: README.md
vscode-extension/: README.md  language-configuration-nexui.json  package-lock.json  package.json  tsconfig.json
vscode-extension/snippets/: nex.json  nexui.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: nex.tmLanguage.json  nexui.tmLanguage.json
xtask/src/: main.rs
(+81 files in other folders)
