[package]
name = "nex"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
torch = ["nexc_driver/torch"]

[dependencies]
nexc_ast = { path = "../nexc_ast" }
nexc_driver = { path = "../nexc_driver" }
nexc_diag = { path = "../nexc_diag" }
nexc_fmt = { path = "../nexc_fmt" }
nexc_lint = { path = "../nexc_lint" }
nexc_resolve = { path = "../nexc_resolve" }
nex_repl = { path = "../nex_repl" }
serde_json = "1"

[[bin]]
name = "nex"
path = "src/main.rs"
