[package]
name = "nex3d_native"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
winit = "0.30"
wgpu = "23"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rodio = "0.19"
gilrs = "0.11"
tobj = "4"
gltf = "1"
