[package]
name = "nex_lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "nex-lsp"
path = "src/main.rs"

[dependencies]
nexc_ast = { path = "../nexc_ast" }
nexc_diag = { path = "../nexc_diag" }
nexc_driver = { path = "../nexc_driver" }
nexc_lint = { path = "../nexc_lint" }
nexc_parse = { path = "../nexc_parse" }
nexc_lex = { path = "../nexc_lex" }
nexui_parse = { path = "../nexui_parse" }
serde_json = { workspace = true }
