[package]
name = "nex_runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
libc = "0.2"
rand = "0.8"
serde_json = "1"
rustls = "0.23"
webpki-roots = "0.26"
rustls-pki-types = "1"
sha1 = "0.10"
base64 = "0.22"
