[package]
name = "nexc_fmt"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
nexc_ast = { path = "../nexc_ast" }
nexc_diag = { path = "../nexc_diag" }
nexc_lex = { path = "../nexc_lex" }
nexc_parse = { path = "../nexc_parse" }

