[package]
name = "nexc_ir"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
nexc_ast = { path = "../nexc_ast" }
nexc_diag = { path = "../nexc_diag" }
nexc_layout = { path = "../nexc_layout" }
nexc_type = { path = "../nexc_type" }

